welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:13: error: ';' expected but identifier found.
}faireMotif()
 ^